kubernetes/apps/observability/policy-reporter/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: policy-reporter
    app.kubernetes.io/name: policy-reporter-ui
    app.kubernetes.io/part-of: policy-reporter
  name: policy-reporter-ui
spec:
  hostnames:
    - pr.kantai.xyz
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: policy-reporter-ui
          port: 8080
